--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,10 +50,16 @@
     background-position: 100% 100%, 0 100%;
     background-repeat: no-repeat;
     transition: 0.3s ease;
-    transition-property: background-size, color, background-color, border-color;
+    transition-property: background-size, background-color, border-color;
   }
   .animated-underline:hover,
   .animated-underline:focus-visible {
     background-size: 0 2px, 100% 2px;
+  }
+
+  .border-transition {
+    transition-property: border-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
   }
 }
