--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,20 @@
   .theme {
     @apply transition duration-300 ease-in-out cursor-pointer hover:text-pink-300;
   }
+  .blockquote p:first-of-type::before,
+  .blockquote p:last-of-type::after {
+    content: '';
+  }
+
+  .light blockquote,
+  .dark blockquote {
+    border-style: solid;
+    border-width: 0 0 0 0.25rem;
+    border-image: linear-gradient(to top, #00ff94, #00e0f3, #00c4fd) 1;
+  }
+  blockquote > * {
+    padding-left: 1em;
+  }
 }
 
 @layer base {
